@@ -1,6 +1,3 @@
-- Write python utility (factory) functions that create the Axis objects easily
-  for the user.
-
 - Rename the oor_fill_record_stack template to fill_value_cache
 
 - Rename bc_value_traits to bin_utils and move it into its own header file.
